setup the translation build

--- a/translations/doxy_de.po
+++ b/translations/doxy_de.po
@@ -19,16 +19,14 @@ msgctxt "doxy-text|"
 msgid "All"
 msgstr "Alle"
 
-msgctxt "doxy-text|"
+#msgctxt "doxy-text|"
 msgid "Bug"
 msgstr "Fehler"
 
-msgctxt "doxy-text|"
+#msgctxt "doxy-text|"
 msgid ""
 "The documentation for this singleton was generated from the following files:"
-msgstr ""
-"Die Dokumentation für diese Singleton wurde aus den folgenden Dateien "
-"generiert:"
+msgstr "Die Dokumentation für diese Singleton wurde aus den folgenden Dateien generiert:"
 
 msgctxt "doxy-rtf|"
 msgid "1252"
